fix: only 3 columns of comics, even at largest resolution
Some were getting too small to read

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -112,7 +112,7 @@
 }
 
 .comic {
-    @apply p-8 w-full lg:w-1/2 xl:w-1/3 2xl:w-1/4;
+    @apply p-8 w-full lg:w-1/2 xl:w-1/3;
 }
 
 .comic h4 {
